# srfc-interface-discriminators

./: Anchor.toml  Cargo.toml  README.md
interface-instruction/: Cargo.toml
interface-instruction/derive/: Cargo.toml
interface-instruction/derive/src/: lib.rs
interface-instruction/src/: lib.rs
interface-instruction/syn/: Cargo.toml
interface-instructions/: Cargo.toml
interface-instructions/derive/: Cargo.toml
interface-instructions/derive/src/: lib.rs
interface-instructions/registry/: Cargo.toml
interface-instructions/registry/src/: error.rs  instructions.rs  lib.rs
interface-instructions/src/: error.rs  instructions.rs  lib.rs
interface-instructions/syn/: Cargo.toml
interface-instructions/syn/src/: instructions.rs  interface.rs  lib.rs
interface-instructions/tests/: mod.rs
programs/anchor-example/: Cargo.toml
programs/anchor-example/src/: lib.rs
programs/native-example/: Cargo.toml
programs/native-example/src/: lib.rs  processor.rs
programs/shank-example/: Cargo.toml
programs/shank-example/src/: lib.rs  processor.rs
tests/: sample-program.ts
