[package]
name = "anchor-example"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "anchor_example"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { git = "https://github.com/buffalojoec/anchor", branch = "joec/interface-discriminators" }
anchor-spl = { git = "https://github.com/buffalojoec/anchor", branch = "joec/interface-discriminators" }