[package]
name = "shank-example"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "shank_example"

[dependencies]
borsh = "=0.9.3"
shank = { git = "https://github.com/buffalojoec/shank", branch = "joec/interface-discriminators" }
solana-program = "1.14.12"
spl-associated-token-account = { version = "1.1.3", features = ["no-entrypoint"] }
spl-interface-instruction = { version = "0.1.0", path = "../../interface-instruction" }
spl-token = { version = "3.5.0", features = ["no-entrypoint"] }
spl-token-2022 = { version = "0.6.1", features = ["no-entrypoint"] }
winnow = "=0.4.1"
