[package]
name = "shank-example"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "shank_example"

[dependencies]
borsh = ">=0.9, <0.11"
borsh-derive = ">=0.9, <0.11"
shank = { git = "https://github.com/buffalojoec/shank", branch = "joec/interface-discriminators" }
solana-program = ">=1.14, <1.17"
spl-interface-instructions = { version = "0.1.0", path = "../../interface-instructions" }
getrandom = { version = "0.2.2", features = ["custom"] }